--- a/RepoZ.App.Win/MainWindow.xaml
+++ b/RepoZ.App.Win/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Controls:MetroWindow x:Class="RepoZ.UI.Win.Wpf.MainWindow"
+﻿<Controls:MetroWindow x:Class="RepoZ.App.Win.MainWindow"
 					  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 					  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 					  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,7 +6,7 @@
 					  xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
 					  mc:Ignorable="d"
 					  xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-					  xmlns:controls="clr-namespace:RepoZ.UI.Win.Wpf.Controls"
+					  xmlns:controls="clr-namespace:RepoZ.App.Win.Controls"
 					  TextElement.Foreground="{DynamicResource MaterialDesignBody}"
 					  TextElement.FontWeight="Regular"
 					  TextElement.FontSize="12"
