--- a/RepoZ.App.Win/NotifyIconResources.xaml
+++ b/RepoZ.App.Win/NotifyIconResources.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:tb="http://www.hardcodet.net/taskbar"
-                    xmlns:local="clr-namespace:RepoZ.UI.Win.Wpf">
+                    xmlns:local="clr-namespace:RepoZ.App.Win">
 
 	<!-- The taskbar context menu - the first row is a dummy to show off simple data binding -->
 	<!--
